fix(web): Improve PWA manifest and service worker
Updates the PWA manifest and service worker for better compatibility and offline functionality.

- Adjusts the `manifest.json` with improved metadata, `id`, and `purpose` for maskable icons.
- Modifies `index.html` to use a relative path for `manifest.json` and the service worker.
- Updates `sw.js` to ensure correct caching of assets and network requests, including handling navigation requests.
- Refactors `gemini.ts` to correctly initialize `GoogleGenAI` and access response text.
- Improves installation guide text in `App.tsx` for clarity.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <!-- Removed leading slash for better compatibility -->
     <link rel="manifest" href="manifest.json">
     <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/2649/2649231.png">
     <title>ProTrack Management</title>
@@ -34,7 +35,7 @@
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-          // Use root sw.js
+          // Use relative path for sw.js
           navigator.serviceWorker.register('sw.js')
             .then(reg => console.log('ProTrack SW Registered'))
             .catch(err => console.log('SW registration failed:', err));
