Add message to indicate GitHub Pages is working

--- a/index.html
+++ b/index.html
@@ -42,5 +42,10 @@
         });
       }
     </script>
+    <script>
+  document.getElementById("root").innerHTML =
+    "<h1 style='padding:20px;font-size:24px'>✅ GitHub Pages works</h1>";
+</script>
+
 </body>
 </html>
